// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DashbaordListFilters correctly 1`] = `
<DashboardListFilters
  filters={
    Object {
      "cuisine": "",
      "dishType": "",
      "keyIngredients": Array [],
      "text": "",
    }
  }
  setCuisineFilter={[MockFunction]}
  setKeyIngredientFilter={[MockFunction]}
  setTextFilter={[MockFunction]}
  setTypeFilter={[MockFunction]}
/>
`;

exports[`should render DashbaordListFilters with alt filters 1`] = `
<DashboardListFilters
  filters={
    Object {
      "cuisine": "",
      "dishType": "",
      "keyIngredients": Array [],
      "text": "toast",
    }
  }
  setCuisineFilter={[MockFunction]}
  setKeyIngredientFilter={[MockFunction]}
  setTextFilter={[MockFunction]}
  setTypeFilter={[MockFunction]}
/>
`;
